# ism-biometric

./: .gitignore
face-recognition1/: .clang-format  CMakeLists.txt  face-recognition1.cpp
face-recognition1/resources/: csv.ext
hw/: predict.py  train.py
hw/trained_model/: keras_metadata.pb  saved_model.pb
hw/trained_model/variables/: variables.index
java-opencv1/src/ro/ase/app/: Application.java  DetectFaceDemo.java
